[gd_scene load_steps=5 format=3 uid="uid://dggdd2bdwqf3f"]

[ext_resource type="Script" path="res://connection_ui.gd" id="1_a6ob8"]

[sub_resource type="SystemFont" id="SystemFont_ech2q"]
font_names = PackedStringArray("Fira Sans")
hinting = 2
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_l6igi"]
font_names = PackedStringArray("Noto Sans CJK SC", "Noto Color Emoji")
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_qwwg4"]
fallbacks = Array[Font]([SubResource("SystemFont_l6igi")])
base_font = SubResource("SystemFont_ech2q")

[node name="ConnectionUI" type="Node2D"]
script = ExtResource("1_a6ob8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 381.0
offset_bottom = 144.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 0
text = "Server"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ServerEditor" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
placeholder_text = "wss://"
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Username"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="UsernameEditor" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
tooltip_text = "- should not contain any empty character
- should be longer than 2"
theme_override_fonts/font = SubResource("FontVariation_qwwg4")
theme_override_font_sizes/font_size = 35
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Room"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="RoomEditor" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
tooltip_text = "create a new room if \"0\" is set"
theme_override_font_sizes/font_size = 20
text = "0"
placeholder_text = "0"
alignment = 1
virtual_keyboard_type = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[connection signal="gui_input" from="VBoxContainer/GridContainer/Label" to="." method="_on_label_gui_input"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/ServerEditor" to="." method="_on_server_editor_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/UsernameEditor" to="." method="_on_username_editor_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/RoomEditor" to="." method="_on_room_editor_text_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
